# buzz-rust

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: codecov.yml  tests.yml
code/: Cargo.toml  build.rs  rustfmt.toml
code/examples/: df_s3.rs  direct_s3.rs  query-delta-taxi.json  query-static-sample.json  query.json  steps.json
code/examples/delta-tbl-overwrite/: part-00000-74c070ed-19a6-4ab4-83b6-7a0f0d66f70d-c000.snappy.parquet  part-00000-f4a247c9-a3bb-4b1e-adc7-7269808b8d73-c000.snappy.parquet
code/examples/delta-tbl-partition/year=2020/: part-00000-755eb925-59ad-4167-b46b-db694e7f3b2c.c000.snappy.parquet
code/examples/delta-tbl-partition/year=2021/: part-00000-c22c8742-53c8-4ffa-b9c3-ba7705218ca2.c000.snappy.parquet
code/proto/: buzz.proto
code/src/: bee_query.rs  catalog.rs  dataframe_ops.rs  error.rs  example_catalog.rs  flight_client.rs  flight_service.rs  flight_utils.rs  fuse_service.rs  hbee_query.rs  hbee_scheduler.rs  hbee_service.rs  hcomb_manager.rs  hcomb_query.rs  hcomb_scheduler.rs  hcomb_service.rs  hive_query.rs  lib.rs  plan_utils.rs  query.rs  query_planner.rs  range_cache.rs  results_service.rs  s3.rs  utils.rs
code/src/clients/: cached_file.rs  fargate.rs  flight_client.rs  lambda.rs  mod.rs  range_cache.rs  s3.rs
code/src/datasource/: catalog.rs  empty.rs  hcomb.rs  mod.rs  result.rs  s3_parquet.rs  stream.rs
code/src/datasource/catalog/: delta_catalog.rs  mod.rs  static_catalog.rs  test_catalog.rs
code/src/datasource/hbee/: mod.rs  s3_parquet.rs
code/src/examples/: df_s3.rs  direct_s3.rs
code/src/execution_plan/: mod.rs  parquet.rs  s3_parquet.rs  stream.rs
code/src/models/: actions.rs  env.rs  hbee_event.rs  mod.rs  query.rs
code/src/serde/: from_proto.rs  mod.rs  to_proto.rs
code/src/services/: mod.rs  utils.rs
code/src/services/fuse/: flight_client.rs  fuse_service.rs  hbee_scheduler.rs  hcomb_manager.rs  hcomb_scheduler.rs  mod.rs  query_planner.rs
code/src/services/hbee/: collector.rs  flight_client.rs  hbee_service.rs  mod.rs  s3.rs
code/src/services/hcomb/: flight_service.rs  hcomb_service.rs  mod.rs  results_service.rs
docker/: Dockerfile  bee.dockerfile  docker-compose.buzz.yml  docker-compose.flight.yml  docker-compose.yml  hive.dockerfile
infra/: .terraform.lock.hcl  common.tf  main.tf  modules.tf  output.tf  test.tf  versioning.tf
infra/env/: conf.tf
infra/fargate/: ecs.tf  iam.tf  inputs.tf  locals.tf
infra/lambda/: iam.tf  inputs.tf  lambda.tf
src/: bee_query.rs  dataframe_ops.rs  execution_plan.rs  flight_client.rs  flight_server.rs  flight_service.rs  hive_query.rs  lib.rs  main_bee.rs  main_df_local.rs  main_df_s3.rs  main_direct_s3.rs  main_flight_server.rs  main_hive.rs  main_lambda.rs  mod.rs  query_planner.rs  range_cache.rs  results_service.rs  s3.rs  table_provider.rs  test_query.rs
src/datasource/: mod.rs  s3_parquet.rs
src/execution_plan/: mod.rs  s3_parquet.rs  stream.rs
