[package]
name = "buzz-rust"
version = "0.1.0"
authors = ["rdettai <contact@cloudfuse.io>"]
edition = "2018"

[lib]
name = "buzz"

[[bin]]
name = "local"
path = "src/bin/main_df_local.rs"

[[bin]]
name = "s3"
path = "src/bin/main_df_s3.rs"

[[bin]]
name = "direct_s3"
path = "src/bin/main_direct_s3.rs"

# flight tests

[[bin]]
name = "flight_client"
path = "src/bin/main_flight_client.rs"

[[bin]]
  name = "flight_server"
  path = "src/bin/main_flight_server.rs"

# target binaries

[[bin]]
name = "lambda"
path = "src/bin/main_lambda.rs"

[[bin]]
  name = "hive"
  path = "src/bin/main_hive.rs"

[[bin]]
  name = "bee"
  path = "src/bin/main_bee.rs"


[dependencies]
arrow = { git = "https://github.com/alamb/arrow", rev = "a552108", feature=["prettyprint"] }
parquet = { git = "https://github.com/alamb/arrow", rev = "a552108" }
datafusion = { git = "https://github.com/alamb/arrow", rev = "a552108" }
arrow-flight = { git = "https://github.com/alamb/arrow", rev = "a552108" }
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-threaded"] }
rusoto_core = { version = "0.45.0", default_features = false, features=["rustls"] }
rusoto_s3 = { version = "0.45.0", default_features = false, features=["rustls"] }
async-trait = "0.1.41"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.39"
lambda_runtime = "0.2.1"
tonic = "0.3"
pin-project = "1.0.1"
