[package]
name = "buzz-rust"
version = "0.1.0"
authors = ["rdettai <contact@cloudfuse.io>"]
edition = "2018"
build = "build.rs"

[lib]
name = "buzz"

[[bin]]
name = "integ"
path = "src/bin/main_integ.rs"

[[bin]]
name = "hcomb"
path = "src/bin/main_hcomb.rs"

[[bin]]
name = "hbee"
path = "src/bin/main_hbee.rs"

[[bin]]
name = "fuse"
path = "src/bin/main_fuse.rs"


[dependencies]
arrow = { git = "https://github.com/apache/arrow", rev = "d61e185", feature=["prettyprint"] }
parquet = { git = "https://github.com/apache/arrow", rev = "d61e185" }
datafusion = { git = "https://github.com/apache/arrow", rev = "d61e185" }
arrow-flight = { git = "https://github.com/apache/arrow", rev = "d61e185" }

# arrow = { path = "../../arrow/rust/arrow", feature=["prettyprint"] }
# parquet = { path = "../../arrow/rust/parquet" }
# datafusion = { path = "../../arrow/rust/datafusion" }
# arrow-flight = { path = "../../arrow/rust/arrow-flight" }

chrono = { version = "0.4" }
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-threaded", "io-std"] }
rusoto_core = { version = "0.45.0", default_features = false, features=["rustls"] }
rusoto_s3 = { version = "0.45.0", default_features = false, features=["rustls"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lambda_runtime = "0.2.1"
tonic = "0.3"
pin-project = "1.0"
prost = "0.6"
prost-types = "0.6"
hyper = { version = "0.13.4", features = ["stream"] }
base64 = { version = "0.13.0" }

[build-dependencies]
prost-build = { version = "0.6.1" }