[package]
name = "buzz-rust"
version = "0.2.0"
authors = ["rdettai <contact@cloudfuse.io>"]
edition = "2018"
build = "build.rs"

[lib]
name = "buzz"

[[bin]]
name = "integ"
path = "src/bin/main_integ.rs"

[[bin]]
name = "hcomb"
path = "src/bin/main_hcomb.rs"

[[bin]]
name = "hbee_local"
path = "src/bin/main_hbee_local.rs"

[[bin]]
name = "hbee_lambda"
path = "src/bin/main_hbee_lambda.rs"

[[bin]]
name = "hbee_tests"
path = "src/bin/main_hbee_tests.rs"

[[bin]]
name = "fuse_local"
path = "src/bin/main_fuse_local.rs"

[[bin]]
name = "fuse_lambda"
path = "src/bin/main_fuse_lambda.rs"

[dependencies]
arrow = { version = "4.3", features = ["prettyprint"] }
arrow-parquet = { package = "parquet", version = "4.3", features = ["arrow"] }
datafusion = { git = "https://github.com/apache/arrow-datafusion", rev = "c82c29c926e73b3c3b9c5351bcd7b01e4d0aa6a8" }
arrow-flight = { version = "4.0"  }
deltalake = { git = "https://github.com/rdettai/delta-rs/", rev = "eedf67086aec773014dfbb1ee550134755974321", features = ["s3-rustls"] }
# deltalake = { path = "../../delta-rs/rust", features = ["s3-rustls"] }

chrono = { version = "0.4" }
tokio = { version = "1.0", features = ["fs", "macros", "io-std"] }
tokio-stream = { version = "0.1.2" }
rusoto_core = { version = "0.46.0", default_features = false, features=["rustls"] }
rusoto_s3 = { version = "0.46.0", default_features = false, features=["rustls"] }
rusoto_lambda = { version = "0.46.0", default_features = false, features=["rustls"] }
rusoto_ecs = { version = "0.46.0", default_features = false, features=["rustls"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lambda_runtime = "0.2.1"
tonic = "0.4"
pin-project = "1.0"
prost = "0.7"
prost-types = "0.7"
hyper = { version = "0.14.2", features = ["stream"] }
base64 = { version = "0.13.0" }
envy = {version = "0.4" }

[build-dependencies]
prost-build = { version = "0.7" }